cleaning up tbDEX project page

--- a/site/src/content/projects/tbdex/heading.mdx
+++ b/site/src/content/projects/tbdex/heading.mdx
@@ -18,19 +18,26 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to <Tooltip
     {
       type: 'button',
       data: {
-        label: 'Getting Started',
-        url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_TBDEX.md',
-        isExternalLink: true,
-        imageURL: '/img/external-link-blue-icon.svg',
+        label: '📃 tbDEX Whitepaper',
+        url: 'https://tbdex.io/whitepaper.pdf',
       },
     },
     {
       type: 'button',
       data: {
-        label: 'Chat',
+        label: 'GitHub',
+        url: 'https://github.com/TBD54566975/tbdex-protocol',
+        isExternalLink: true,
+        imageURL: '/img/github-icon.svg',
+      },
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'Discord',
         url: 'https://discord.gg/tbd',
         isExternalLink: true,
-        imageURL: '/img/external-link-blue-icon.svg',
+        imageURL: '/img/discord-icon.svg',
       },
     },
   ]}
