--- a/site/api/web5-js/did.mdx
+++ b/site/api/web5-js/did.mdx
@@ -1,5 +1,6 @@
 import Divider from '@site/src/components/Divider';
 import ApiDetails from '@site/src/components/ApiDetails';
+import CodeSnippet from '@site/src/components/CodeSnippet';
 
 # did
 ## Overview
@@ -49,6 +50,8 @@ You do not usually need to manually invoke this, as the <a href="/api/web5-js/#c
 The created DID
 
 #### Code Example
+
+<CodeSnippet function="createMyDid" />
 
 ```js
 const myDid = await web5.did.create('ion');
