test test with alpha change

--- a/site/docs/web5/_quickstart-02-prereqs-and-installation.mdx
+++ b/site/docs/web5/_quickstart-02-prereqs-and-installation.mdx
@@ -35,7 +35,7 @@ cd web5-app
 <p>Use NPM to install Web5:</p>
 
 ```bash
-npm install @tbd54566975/web5
+npm install @web5/api
 ```
 
 :::note
@@ -56,7 +56,7 @@ touch index.js
 
 Open `index.js` in your editor and add this line at the top of the file to import Web5:
 ```js
-import { Web5 } from '@tbd54566975/web5';
+import { Web5 } from "@web5/api";
 ```
 
 <details>
