Update agent text

--- a/site/api/web5-js/index.mdx
+++ b/site/api/web5-js/index.mdx
@@ -235,7 +235,7 @@ const { web5, did: myDid } = await Web5.connect({
 });
 ```
 
-##### Instantiate Web5 instance with a Web5Agent and existing DID to connect to.
+##### Instantiate Web5 instance with an agent and existing DID to connect to.
 ```js
 const web5 = new Web5({
   agent: identityAgent,
