--- a/site/api/web5-js/index.mdx
+++ b/site/api/web5-js/index.mdx
@@ -221,12 +221,12 @@ The outputs of this method invocation will be used throughout the other API meth
 
 #### Code Examples
 
-##### Connect to web5
+##### Connect to Web5
 ```js
 const { web5, did } = await Web5.connect();
 ```
 
-##### Specify list of decentralized web nodes endpoints to define
+##### Specify a Decentralized Web Node endpoint
 ```js
 const { web5, did: myDid } = await Web5.connect({
   techPreview: {
@@ -235,7 +235,7 @@ const { web5, did: myDid } = await Web5.connect({
 });
 ```
 
-##### Instantiate Web5 instance with an agent and existing DID to connect to.
+##### Connect to Web5 with an exiting agent and existing DID
 ```js
 const web5 = new Web5({
   agent: identityAgent,
