--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -54,10 +54,10 @@ We've highlighted some repositories with new open issues to help you get started
 
 ## Upcoming Community Events
 
-<a href="https://discord.com/events/937858703112155166/1137041308989521990">
+<a href="https://discord.com/events/937858703112155166/1145899363864944802">
   <img
     style={{ height: '446px' }}
-    src="https://hackmd.io/_uploads/rJz38hRi2.png"
+    src="https://hackmd.io/_uploads/HJyTp-A0n.png"
   />
 </a>
 
