add published attribute

--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -159,7 +159,7 @@ const { protocol } = await web5.dwn.protocols.configure({
   message: {
     definition: {
       protocol: "https://photos.org/protocol",
-      publish: true,
+      published: true,
       types: {
         album: {
           schema: "https://photos.org/protocol/album",
