--- a/site/docs/web5/_quickstart-05-write-record.mdx
+++ b/site/docs/web5/_quickstart-05-write-record.mdx
@@ -1,3 +1,5 @@
+import CodeSnippet from "@site/src/components/CodeSnippet";
+
 <section class="docs-section">
 
 ## 2. Write DWN Records
@@ -18,14 +20,8 @@ A user can host their DWN in mulitple locations. The Web5 SDK is both browser an
 </details>
 
 Add the following to `index.js`:
-```js
-const { record } = await web5.dwn.records.create({
-  data: "Hello Web5",
-  message: {
-    dataFormat: 'text/plain',
-  },
-});
-```
+
+<CodeSnippet functionName="createTextRecord" />
 
 <details>
   <summary>Test your code</summary>
