--- a/site/docs/web5/_quickstart-07-update-record.mdx
+++ b/site/docs/web5/_quickstart-07-update-record.mdx
@@ -1,3 +1,5 @@
+import CodeSnippet from '@site/src/components/CodeSnippet';
+
 <section class="docs-section">
 
 ## 4. Update DWN Records
@@ -5,9 +7,7 @@
 To update the record, call `update` on the `record` object itself.
 
 Add the following to `index.js`:
-```js
-const updateResult = await record.update({data: "Hello, I'm updated!"});
-```
+<CodeSnippet functionName="updateTextRecord" />
 
 <details>
 <summary>Test your code</summary>
