--- a/site/api/web5-js/index.mdx
+++ b/site/api/web5-js/index.mdx
@@ -32,11 +32,11 @@ npm install @web5/api
   </TabItem>
   <TabItem value="cdn" label="CDN">
 
-<ScriptSrc unpkg={true} />
+<ScriptSrc src='unpkg' />
 
 or
 
-<ScriptSrc jsdelivr={true} />
+<ScriptSrc src='jsdelivr' />
 
   </TabItem>
 </Tabs>
@@ -101,11 +101,11 @@ secp.etc.hmacSha256Async = (k, ...m) =>
   </TabItem>
   <TabItem value="cdn" label="CDN">
 
-<ScriptSrc unpkg={true} />
+<ScriptSrc src='unpkg' />
 
 or
 
-<ScriptSrc jsdelivr={true} />
+<ScriptSrc src='jsdelivr' />
 
   </TabItem>
 </Tabs>
