--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -52,6 +52,13 @@ Configures a protocol definition in the user's local DWN, remote DWN, or another
                                             },
                                             {
                                                 data: {
+                                                    type: 'boolean',
+                                                    field: 'published',
+                                                    value: 'Specifies whether the protocol appears in the results of protocols.query()',
+                                                },
+                                            },
+                                            {
+                                                data: {
                                                     isObject: true,
                                                     type: 'ProtocolTypes',
                                                     field: 'types',
