changed published description

--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -54,7 +54,7 @@ Configures a protocol definition in the user's local DWN, remote DWN, or another
                                                 data: {
                                                     type: 'boolean',
                                                     field: 'published',
-                                                    value: 'Specifies whether the protocol appears in the results of protocols.query()',
+                                                    value: 'Indicates whether the protocol should be public',
                                                 },
                                             },
                                             {
