--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -110,7 +110,12 @@ Below is a template we can use that will be necessary for nearly every test we w
 ```js
 import { test, beforeAll, expect, describe } from 'vitest';
 import { Web5 } from '@web5/api/browser';
-// import your functions from your codesnippet file here
+// import your functions from your codesnippet file
+import {
+  queryMusicProtocol,
+  queryProtocolDescending,
+  configureProtocolWithDefinition
+  } from '../../../code-snippets/api/web5-js/protocols'
 
 let web5;
 let record;
@@ -137,7 +142,6 @@ describe('tests for /api/web5-js/dwn/protocols.js', () => {
       myDid,
       protocolDefinition,
     );
-    // We do 202 for this test because protocols comes back undefined, need to check if this is expected behavior.
     expect(status.code).toBe(202);
   });
 
