--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -105,7 +105,7 @@ The CodeSnippet component will look for the function name you provided in the `c
 
 3. Write tests for the code snippet.
 
-Below is a template we can use that will be necessary for nearly every test we write for Web5.
+Below is an example test file.
 
 The file path should match the same path as both code snippet and the actual content:
 
