updating upcoming events

--- a/site/src/pages/open-source/contributing.mdx
+++ b/site/src/pages/open-source/contributing.mdx
@@ -54,12 +54,19 @@ We've highlighted some repositories with new open issues to help you get started
 
 ## Upcoming Community Events
 
-<a href="https://discord.com/events/937858703112155166/1145899363864944802">
+<a href="https://discord.com/events/937858703112155166/1154126364484583465">
   <img
     style={{ height: '446px' }}
-    src="https://hackmd.io/_uploads/HJyTp-A0n.png"
+    src="https://hackmd.io/_uploads/Bk2Mr77xT.png"
   />
 </a>
+<a href="https://discord.com/events/937858703112155166/1154132976519618591">
+  <img
+    style={{ height: '446px' }}
+    src="https://hackmd.io/_uploads/ByU7rm7x6.png"
+  />
+</a>
+
 
 ## Contributing Code Snippets
 If you're working on tutorials or guides of any sort, we have a Code Snippet system that allows us to update the code in one place but also allows it to be runnable and tested.
