Update Twitter icon and fix typos

--- a/site/src/content/open-source/incubation/content.mdx
+++ b/site/src/content/open-source/incubation/content.mdx
@@ -14,7 +14,7 @@ import { content } from '@site/src/content/open-source/incubation/incubation-pro
 
   When projects reach maturity, they may apply to be promoted out of Incubation into a central project.
 
-  Got ideas you’d like to build with us? Propose an project including:
+  Got ideas you’d like to build with us? Propose a project including:
 
   <ul>
     <li>An introduction to you, your organization, and your mission</li>
