fixed typo in blogs
Signed-off-by: captain-Akshay <akshay.sharma0503@gmail.com>

--- a/site/blog/2023-06-23-did-hack.md
+++ b/site/blog/2023-06-23-did-hack.md
@@ -51,7 +51,7 @@ Hackathon participants gathered in small teams to build projects centered around
 * `did-bsv`, a DID method for verifiable ordinals
 * a decentralized housing platform using DIDs and VCs for reputation tracking
 
-Fortunately, the [presentations of projects](https://youtu.be/0o9PJ1HmNuQ) was recorded.
+Fortunately, the [presentations of the projects](https://youtu.be/0o9PJ1HmNuQ) were recorded.
 
 ## Hackathon Winner
 
