Add missing full stop at api.mdx

--- a/site/docs/api.mdx
+++ b/site/docs/api.mdx
@@ -13,7 +13,7 @@ import ApiCard from '@site/src/components/ApiCard';
     <ApiCard
       url="/docs/apis/ssi-service"
       name="SSI Service API"
-      description="The Self Sovereign Identity Service facilitates all things relating to DIDs and Verifiable Credentials "
+      description="The Self Sovereign Identity Service facilitates all things relating to DIDs and Verifiable Credentials. "
     />
     <ApiCard
       url="https://tbd54566975.github.io/dwn-sdk-js/"
