removed full stop from box components

--- a/site/src/content/projects/tbdex-protocol.mdx
+++ b/site/src/content/projects/tbdex-protocol.mdx
@@ -2,4 +2,4 @@
 hide_table_of_contents: true
 ---
 
-An implementation of <TooltipWrapper trigger="DIF">Decentralized Identity Foundation</TooltipWrapper>'s emerging decentralized personal datastore standard.
+An implementation of <TooltipWrapper trigger="DIF">Decentralized Identity Foundation</TooltipWrapper>'s emerging decentralized personal datastore standard
