--- a/site/api/web5-js/did.mdx
+++ b/site/api/web5-js/did.mdx
@@ -16,7 +16,7 @@ The `did` class is responsible for providing operations related to DIDs
 
 ### create(method, options)
 
-Enables generation of DIDs for a [supported set of DID Methods](/docs/web5/learn/decentralized-identifiers#methods). The output is method-specific, and handles things like key generation and assembly of DID Documents that can be published to DID networks.
+Enables generation of DIDs for a [supported set of DID Methods](/docs/web5/learn/decentralized-identifiers#methods). The output is method-specific, and handles things like key generation and assembly of DID Documents that can be published to DID networks
 
 :::note
 You do not usually need to manually invoke this, as the <a href="/api/web5-js/#connect">Web5.connect()</a> method already acquires a DID for the user (either by direct creation or connection to an identity agent app).
@@ -61,7 +61,7 @@ const myDid = await web5.did.create('ion');
 
 ### resolve(did)
 
-Resolves a DID into a DID document by using the "read" operation of the applicable DID method. DIDs that are resolved are cached for a default of 15 minutes.
+Resolves a DID into a DID document by using the "read" operation of the applicable DID method. DIDs that are resolved are cached for a default of 15 minutes
 
 #### Parameters
 
