--- a/site/api/web5-js/dwn/protocol.mdx
+++ b/site/api/web5-js/dwn/protocol.mdx
@@ -38,7 +38,7 @@ Gets the protocol definition
 
 ### send(did)
 
-Sends the protocol to the remote DWN endpoints of a provided DID. This function only needs to be called if you'd like to send the protocol to a user's remote DWNs instantly and cannot wait for [sync](/docs/web5/learn/sync#sync-intervals) to occur.
+Sends the protocol to the remote DWN endpoints of a provided DID. This function only needs to be called if you'd like to send the protocol to a user's remote DWNs instantly and cannot wait for [sync](/docs/web5/learn/sync#sync-intervals) to occur
 
 #### Parameters
 
