--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -17,7 +17,7 @@ The `protocols` class is responsible for providing convenience methods for manag
 
 ### configure(request)
 
-Configures a protocol definition in the user's local DWN, remote DWN, or another party's DWN (if permitted). Fields under the `structure` object of the Protocol definition are expected to be one of the type references matching those defined in the `types` object. The type structures are recursive, so types form a graph and each type can have within it further attached types or rule statements that are all denoted with the prefix $.
+Configures a protocol definition in the user's local DWN, remote DWN, or another party's DWN (if permitted). Fields under the `structure` object of the Protocol definition are expected to be one of the type references matching those defined in the `types` object. The type structures are recursive, so types form a graph and each type can have within it further attached types or rule statements that are all denoted with the prefix $
 
 #### Parameters
 
@@ -171,7 +171,7 @@ Configures a protocol definition in the user's local DWN, remote DWN, or another
 
 ### query(request)
 
-Queries a DID's DWNs for the presence of a protocol. This method is useful in detecting what protocols a given DID has installed to enable interaction over the protocol. See [query from DWN guide](/docs/web5/build/decentralized-web-nodes/query-from-dwn) for more details.
+Queries a DID's DWNs for the presence of a protocol. This method is useful in detecting what protocols a given DID has installed to enable interaction over the protocol. See [query from DWN guide](/docs/web5/build/decentralized-web-nodes/query-from-dwn) for more details
 
 #### Parameters
 
