--- a/site/api/web5-js/dwn/records.mdx
+++ b/site/api/web5-js/dwn/records.mdx
@@ -156,13 +156,13 @@ const {record} = await web5.dwn.records.create({
 
 ### write(request)
 
-The [create() method](#createrequest) is an alias for write() and both take the same request object properties, and return the same response.
+The [create() method](#createrequest) is an alias for write() and both take the same request object properties, and return the same response
 
 <Divider type="slash"/>
 
 ### query(request)
 
-Method for querying the DWN of a provided target. See [query from DWN guide](/docs/web5/build/decentralized-web-nodes/query-from-dwn) for more details.
+Method for querying the DWN of a provided target. See [query from DWN guide](/docs/web5/build/decentralized-web-nodes/query-from-dwn) for more details
 
 #### Parameters
 
@@ -272,7 +272,7 @@ const response = await web5.dwn.records.query({
 
 ### read(request)
 
-Reads a record stored in the user's local DWN, remote DWN, or another party's DWN (if permitted).
+Reads a record stored in the user's local DWN, remote DWN, or another party's DWN (if permitted)
 
 #### Parameters
 
