--- a/site/api/web5-js/dwn/record.mdx
+++ b/site/api/web5-js/dwn/record.mdx
@@ -85,7 +85,7 @@ const recordText = await myRecord.data.text();
 
 ### send(did)
 
-Sends the record to the remote DWN endpoints of a provided DID. This function only needs to be called if you'd like to send the record to a user's remote DWNs instantly and cannot wait for [sync](/docs/web5/learn/sync#sync-intervals) to occur
+Sends the record to the remote DWN endpoints of a provided DID. This function only needs to be called if you'd like to send the record to a user's remote DWNs instantly and cannot wait for [sync](/docs/web5/learn/sync#sync-intervals) to occur.
 
 #### Parameters
 
